--- a/site-templates/karmeliterschule/css/screen/content.css
+++ b/site-templates/karmeliterschule/css/screen/content.css
@@ -51,7 +51,8 @@
   	margin: 0 0 0.25em 0; 
   }
 
-  h1 { font-family: Arial; color: #4D87C7; font-size: 1.6em; margin: 10px 0 10px 0; }
+ /* h1 { font-family: Arial; color: #4D87C7; font-size: 1.6em; margin: 10px 0 10px 0; }*/
+  h1 { font-family:"YanoneKaffeesatzBold",times,serif; color:#000; font-size: 2em; margin: 0 0 10 0;}
   h2 { font-family: Arial; color: #4D87C7; font-size: 1.3em; margin: 20px 0 10px 0;}
   h3 { font-size: 1.1em; font-family: Arial; line-height: 0.2em;}                        /* 18px */
   h4 { font-size: 133.33% }                     /* 16px */
