--- a/trunk/site-templates/karmeliterschule/css/screen/basemod.css
+++ b/trunk/site-templates/karmeliterschule/css/screen/basemod.css
@@ -17,54 +17,6 @@
 
 @media all
 {
- /*------------------------------------------------------------------------------------------------------*/
- /* FONTS */
-  @font-face {
-    font-family: 'YanoneKaffeesatzThin';
-    src: url('../../fonts/YanoneKaffeesatz-Thin-webfont.eot');
-    src: url('../fonts/YanoneKaffeesatz-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/YanoneKaffeesatz-Thin-webfont.woff') format('woff'),
-         url('../fonts/YanoneKaffeesatz-Thin-webfont.ttf') format('truetype'),
-         url('../fonts/YanoneKaffeesatz-Thin-webfont.svg#YanoneKaffeesatzThin') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: 'YanoneKaffeesatzLight';
-    src: url('../fonts/YanoneKaffeesatz-Light-webfont.eot');
-    src: url('../fonts/YanoneKaffeesatz-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/YanoneKaffeesatz-Light-webfont.woff') format('woff'),
-         url('../fonts/YanoneKaffeesatz-Light-webfont.ttf') format('truetype'),
-         url('../fonts/YanoneKaffeesatz-Light-webfont.svg#YanoneKaffeesatzLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-  }
-
-  @font-face {
-      font-family: 'YanoneKaffeesatzRegular';
-      src: url('../fonts/YanoneKaffeesatz-Regular-webfont.eot');
-      src: url('../fonts/YanoneKaffeesatz-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-           url('../fonts/YanoneKaffeesatz-Regular-webfont.woff') format('woff'),
-           url('../fonts/YanoneKaffeesatz-Regular-webfont.ttf') format('truetype'),
-           url('../fonts/YanoneKaffeesatz-Regular-webfont.svg#YanoneKaffeesatzRegular') format('svg');
-      font-weight: normal;
-      font-style: normal;
-  }
-
-  @font-face {
-      font-family: 'YanoneKaffeesatzBold';
-      src: url('../fonts/YanoneKaffeesatz-Bold-webfont.eot');
-      src: url('../fonts/YanoneKaffeesatz-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-           url('../fonts/YanoneKaffeesatz-Bold-webfont.woff') format('woff'),
-           url('../fonts/YanoneKaffeesatz-Bold-webfont.ttf') format('truetype'),
-           url('../fonts/YanoneKaffeesatz-Bold-webfont.svg#YanoneKaffeesatzBold') format('svg');
-      font-weight: normal;
-      font-style: normal;
-  }
-
- /*------------------------------------------------------------------------------------------------------*/
-
   /**
    * (en) Formatting YAML's  basic layout elements
    * (de) Gestaltung des YAML Basis-Layouts
@@ -268,6 +220,19 @@
   
   #contact_form .submit:hover { background: #f6ffe9; }
   
+  #contact_form_butterfly
+  {
+    background-image:url('../../images/butterfly.gif');
+    background-repeat: no-repeat;
+    width:128px;
+    height:128px;
+    position:relative;
+    left:120px;
+  }
+
+  #contact_form_email_error { color:red; }
+  #contact_form_message_error { color:red; }
+
   #main { background: #fff;padding:10px 0; }
 
   #footer { 
