--- a/trunk/assets/css/cms_screen2.css
+++ b/trunk/assets/css/cms_screen2.css
@@ -65,7 +65,7 @@
 /* Standard HTML tags */
 /* --------------------------------------------------------------------------------------------------- */
 body { background-color:#085e73; padding:0; margin:0; width:100%; height:100%; overflow:hidden; }
-h1 { font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; font-size:1.5em; font-weight:600; color:#589da6; margin-top:15px; }
+h1 { font-family:'FjordOne',Helvetica,Arial,sans-serif; font-size:1.5em; font-weight:600; color:#589da6; margin-top:15px; }
 h2 { font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; font-size:1.2em; font-weight:normal; color:#9cacb3; margin:0;}
 ul { padding:0; list-style-type:none; }
 li { display:block; }
@@ -113,13 +113,16 @@ li { display:block; }
 /* Special classes */
 /* --------------------------------------------------------------------------------------------------- */
 .title { background-color:#f0f0ed; padding:5px 20px 5px 20px;}
+.title a { text-decoration:none; background-color:#dededc; padding:4px 9px; color:#0c3546; }
+.title a:hover {text-decoration:none; background-color:#b0b0af; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; }
 .bottombar { color:#0c3546; background-color:#f0f0ed; padding:20px; clear:both; }
 .bottombar a { text-decoration:none; border-bottom:1px dotted; color:#0c3546; }
 .navmenu { background-color:#2e505d; color:white; padding:15px;}
 .navmenu ul { margin-top:10px; list-style-type:none; }
 .navmenu ul li { display:block; padding:5px 0; font-size:1em;}
 .navmenu ul li a { color:white; text-decoration:none; }
-.content { background-color:#E0E0E0; }
+.content { background-color:#efefef;/*#E0E0E0;*/ }
+.content-extjs { background-color:#e0e0e0; }
 .dashboard-list { width:73%; }
 .dashboard-list li { text-align:justify; text-justify:newspaper; padding:15px; cursor:pointer; }
 .hover-dashboard { background-color:#2e505d; -moz-border-radius:5px; border-radius: 5px; color:white;}
@@ -138,6 +141,8 @@ li { display:block; }
 #infobar a:hover {text-decoration:none; background-color:#b0b0af; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; }
 #category-description { color:#0c3546; font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; font-size:1.0em; font-weight:600; margin-left:10px; letter-spacing:0.4; }
 #content-wrapper { background-color:#2e505d; }
+#systeminfo {margin:10px;}
+#systeminfo a { text-decoration: none; border-bottom:1px dotted; color:#0c3546;}
 /*#content { background-color:white; }*/
 #bottombar { color:#0c3546; background-color:#f0f0ed; padding:20px; clear:both; }
 #bottombar a { text-decoration:none; border-bottom:1px dotted; color:#0c3546; }
