* added 2 new fields to system settings : company name and additional info * some minor css bugfixes (extjs overrides) * added teaser support to article editing (introducing a new tabbed view in the article editor window) * added a new feature to structures: background image and 3 headlines can be set as standard to every structure now -> large images with text now possible * began to implement a new example template based on twitter bootstrap

--- a/assets/css/cms_screen2.css
+++ b/assets/css/cms_screen2.css
@@ -161,6 +161,13 @@ li { display:block; }
 .x-column-header-sort-DESC { background-color:#d7d2d2; }
 .x-btn-default-toolbar-small { border-style:none; }
 .x-btn-default-toolbar-small-over { background-image:none; background-color:#d7d2d2; border-radius:0;}
+.x-panel-body-default { background-color: #f0f0ed; }
+.x-tab { border-color:#f0f0ed; }
+.x-tab-bar { background-image:none; background-color:#f0f0ed; }
+.x-tab-bar-top .x-tab-bar-body { border-width:1px 0 3px;}
+.x-tab-bar-body { border-color:#f0f0ed; }
+.x-tab-top-active { background-image:none; background-color:#d7d2d2 !important;}
+.x-tab-default-top { background-image:none; background-color:#f0f0ed; border-radius:0; box-shadow:none;}
 
 /* --------------------------------------------------------------------------------------------------- */
 /* 3column layout */
