--- a/trunk/site-templates/albertschweitzerschule/css/albertschweitzer.css
+++ b/trunk/site-templates/albertschweitzerschule/css/albertschweitzer.css
@@ -138,9 +138,18 @@
 		transition-duration: 0.3s;
 	}
 	
+	/* extra bar containing info where-am-i and if set picture description */
+	.infonavbar {
+		padding: 20px 0px 16px 15px;
+		border-bottom: 6px double #ededed;
+		margin-bottom: 30px;
+	}
+	
 	div.headlinewrapper {
-		position: table;
-		height:100%;
+		position: relative;
+		margin-left:auto;
+		margin-right:auto;
+		min-height:560px;
 	}
 	
 	div.headline {
@@ -193,6 +202,23 @@
 		-moz-transition: font-size .3s ease-in-out;
 		-o-transition: font-size .3s ease-in-out;
 		-ms-transition: font-size .3s ease-in-out;
+	}
+	
+	div.imagedescription {
+		font-style: italic;
+		font-size: 0.9em;
+	}
+	
+	div.border-left-col {
+		border-left: 6px double #ededed;
+		width:28%;
+		padding-left:10px;
+	}
+	
+	div.border-right-col {
+		border-right: 6px double #ededed;
+		width: 28%;
+		padding-right:10px;
 	}
 	
 	.btn-blue {
