--- a/site-templates/albertschweitzerschule/css/layout_grids.css
+++ b/site-templates/albertschweitzerschule/css/layout_grids.css
@@ -5,4 +5,5 @@
 
 @import url(bootstrap.min.css);
 @import url(bootstrap-responsive.min.css);
+@import url(buttons.css);
 @import url(albertschweitzer.css);
